# ChangeLog for app-emacs/folding
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/folding/ChangeLog,v 1.22 2012/02/19 13:54:31 klausman Exp $

  19 Feb 2012; Tobias Klausmann <klausman@gentoo.org>
  folding-2009.0905.0811.ebuild:
  Stable on alpha, bug #393771

  14 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  folding-2009.0905.0811.ebuild:
  x86 stable wrt bug #393771

  12 Dec 2011; Agostino Sarubbo <ago@gentoo.org> folding-2009.0905.0811.ebuild:
  Stable for AMD64, wrt bug #393771

*folding-2009.0905.0811 (16 Oct 2009)

  16 Oct 2009; Ulrich Mueller <ulm@gentoo.org>
  +folding-2009.0905.0811.ebuild:
  Version bump, new snapshot from upstream repository.

  17 Aug 2009; Christian Faulhammer <fauli@gentoo.org>
  -folding-2006.1118.ebuild:
  clean up

  07 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  folding-2007.0506.ebuild:
  Stable on alpha, bug #272464

  07 Jun 2009; Markus Meier <maekke@gentoo.org> folding-2007.0506.ebuild:
  amd64/x86 stable, bug #272464

*folding-2007.0506 (29 Jan 2009)

  29 Jan 2009; Ulrich Mueller <ulm@gentoo.org> files/70folding-gentoo.el,
  +folding-2007.0506.ebuild:
  Version bump, bug 256733.

  29 Jan 2009; Christian Faulhammer <fauli@gentoo.org> -folding-2.97.ebuild:
  clean up

  18 Oct 2007; Ulrich Mueller <ulm@gentoo.org> folding-2006.1118.ebuild:
  amd64 stable, bug #195512.

  20 Sep 2007; Raúl Porcel <armin76@gentoo.org> folding-2006.1118.ebuild:
  alpha stable wrt #192617

  16 Sep 2007; Christian Faulhammer <opfer@gentoo.org> folding-2.97.ebuild:
  drop ppc-macos

  16 Sep 2007; Christian Faulhammer <opfer@gentoo.org>
  folding-2006.1118.ebuild:
  stable x86, bug 192617

*folding-2006.1118 (09 Feb 2007)

  09 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
  +folding-2006.1118.ebuild:
  version bump: move to tar.bz2 compression

  06 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.
