@@ -1,27 +1,29 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX 70folding-gentoo.el 221 SHA256 468f7046d035703666f2b865d0165d8e37f0b3029aa5a201aa95f36c6a7ce601 SHA512 e5b9f16218988429da9fdf304967deba2fd76774b5c4eca9d372504cac225ab24de4c976dbca4203d335f06d2fe16043bb817c5a232e517c4c7416e1e9f52076 WHIRLPOOL 7002affb1ab673c0c9bc52b2773a73c3eeab002bc1b98cc820a1184d49eb49c42b77ff660a70808b938887774907025dd84c1a178cb69e6e7cb9018e27819ac2
 DIST folding-2007.0506.el.bz2 48912 SHA256 2753dd5b7f34a04da5da4f5242df9a7b9f364c6c49682f43850190fabec1e218 SHA512 8acf571d3730031901e3ab93fa5b7c16e6cba940c302477660abeaf6de117e22eb553307079261dce7912848a8b6257f87d2e82b77a43eda5a95a330b9611a57 WHIRLPOOL 1517ea17e0e8c72c172b8601f75312c5e76ee494fb2744582cf91ce3173182b3151e41d5463a4631bbba6a2dc18bb28c8c36f2f270a8d9e41e50dbdd8708d6d1
 DIST folding-2009.0905.0811.el.bz2 49421 SHA256 3fa14133e1821b2b7b6063a6e89ff3b83ef77c8fd7f0199e4665915297bc0016 SHA512 2dcc2d525990677cb338291c77bfba5e6b2ca3812d7d4b8103845f21b759f5ee34cad7c277e01087e1920a1c1ada3f07443aa2c1c6142b29b6e59542a900199c WHIRLPOOL 6cc99b393aa9f5d1b71d70986971ed3592ce74cf4e7d02127ec308232fd9c7324651a1c4bfa5f9ae571d378d81b30eeac62d409096b98dcc3d8d3bb99ffce4b1
+DIST folding-2012.0226.1623.el.bz2 49503 SHA256 d1d00dd48284c7509c24003d56e8cf86c46839880d6775efe76682e1cd859482 SHA512 efb645e46e55174f2b538b6812f36d08f576f765ffffdf25af756c852e7bfd6455cb3bc3a540089a60600251b2c144384b7f58b412840a95ce614efd9d5b50c9 WHIRLPOOL 42a17c72d91cee51bec9d37466ef1e9b9812ac05cf01b6dc006e0ec204bff2edc84a2a776e656deb86ca17917eaf7d1716c849d67cdcf9f6c5a1017c99cf9588
 EBUILD folding-2007.0506.ebuild 591 SHA256 f7038f63af3b6a10b2a733d853fe5618658bb0a747ce2c82f471c388665ee801 SHA512 172ba660397987e7d92df2504e80b47750d8bc150158cd275683b52bb0f2e6ea711cfe1cd00fd1d6dc8b053dfb4649d3751f505a5d029083513db642cb04f7d8 WHIRLPOOL af250e7c952392240a81c6bc9e87e85e9f5e289e402f2166ef21356b0489b30f58de93d6842b3e53614f4a5951e6dccecf0d86266f56ba6e4e2308427b76f0a7
-EBUILD folding-2009.0905.0811.ebuild 557 SHA256 dc68b0827aff5081e727cac878fda257cbffbd2f19d2d7bb5d86494f8f85d0b7 SHA512 1516354134151382b80f9be4e863328e5a2f540a91b709499a5210c00ad7dcddd2af9ecabcd165b5e4dea719efcc18ff31357d9cfa3a14a3a1b2a2c1092687e8 WHIRLPOOL 42f3ed8ce21422910a4db08570545a93a64bb44dfc025f9811ce7e66e7266d52c214c0ad0ee84c28bbd513dce7d507bc6fc6a1cc6a72ab442d49bcf77d576c4e
-MISC ChangeLog 2589 SHA256 b66afe439b07924caea1b8027aa1ff63ef202877554c27505720cafc6f0a7419 SHA512 1b20074d02eb9af58db13d6962a40953895eb201444b08e6f379e7528ff1c1c2456aefc51507f1f8bd7d2bf64635268574c24108f1eedda27bfb1802cc23f6a8 WHIRLPOOL e2b54855c95536df95de74b72bed8178d1c8dc8048aea89f9c86e3ea6b0fb6df17e22e672241095e906ef7ea55e0c7294de5332e8ae7389531ddbcd4c308d9dc
+EBUILD folding-2009.0905.0811.ebuild 553 SHA256 a682e2d2a3983aae4f6d22b99071091b77c80d773481ea6c8deda97bfef067b9 SHA512 a2370ca156fa350073a485d35ff09fc73865a09e51774590befdfdf6e03aff4c9856d8ee74a53a3045f7a15df7be5328e7e24d9b819a68ee5b2442ea425466b2 WHIRLPOOL 868b86b3c0a23c3c3d6875d1c42cee5bc6634a96821ddb95262f93e88b4db33a3022e7c7a869b26dc6cba8dc91defe455dff81597be212342f0404a1650b0c81
+EBUILD folding-2012.0226.1623.ebuild 556 SHA256 331f3cac2d96047aa9723826a68c81825be3458fcf0f8f0343fecc845c401613 SHA512 a97bc73d15ccde3e9ae2f9e83d77aee9f7a6b42aa84c0e99b93c61659e9e49bb4a2289e994d4647098d98ce525edbaaf0632af60f5462f9ca5b476e6377293eb WHIRLPOOL 2e0d77d84e702a17aa6ed27f5894c22c243258e8240e316881e39c212f036b10475cd659f573888fd3330352c017751fb3a19bc7e31ed3ae5dfefc101f2fa706
+MISC ChangeLog 2796 SHA256 eab37c6363a0f215133ef8a35b0be7bc1f372d044573f715f6ba0de07b8f0565 SHA512 4729e928dd0b2dd7ca03b9624b6699838117da995c258483f5f9ded28ff4eac2676e70320da73fb5647dd123cc0215b2f9fe21d26239ed6c3741d24ea556228b WHIRLPOOL 946c2fb349ad5db31c0f98699554a4c0347bd6f9a5b7b6b7fe7c3f510f23a8a1e9ca7871dcd1764542cb2cba083efd9fd86f6b73e863b2ddafb7296f940b7264
 MISC metadata.xml 158 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab SHA512 e55d75feae933ba948ae987305ea58e36f5880f18687e8acaf91237e33e251be3ecfd5be27048f4907ea6799e0bcf784b602096dd7e2bc9c450eb5e2bb6a73d2 WHIRLPOOL 1d1676172186235a3e99ca1d148298fb24f6a089f9b7908b3c28c246c8854969835fd3742b8b81e0a30b63d76ee0be0c42bfede2416a30dfc3c8b915a147340c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBAgAGBQJP9e6XAAoJEDxpGckxwJCBCpkP/2HzONQkkrWTSvNJ5H92kChb
-9+7ijfjNjsaerX0ed4WiRRa7cIDL91ES/64KKUSCpy7TYdz3CJaGzUBdiQUc4P3M
-obBM7780/JLvLMr6Ie4nC2V2MwULVbm7lwKrTxpOyvJ639tnM399HQzmF9Qv/aCz
-ymM24y/9hf+OaP6LpPU/1wnEpSrxqZMKZWAu+DHA3fdk+FUw+npEFyPUOcfX6nIe
-ogEYTJR1BwJJikkHCg5f++2ufzQZqinswrt6qdHLuHyYyqOvpJ8KXsirX3laSv8s
-J6Ui8t0p/WkqizoVNt5IejdQTsTIbkTFwQvCA8WV8jKcsxffNveNAfQbOqdyqC3k
-t26xvZylQhuxQoo7S7tezjhBi447KGTzZoDjEVtFOTRgzObljrbzqUF17bSTY0Cq
-I+j2n0+eOeo52HA+BnapwQDXp6mbJTvNlilUWOIC2x0Kf5vmckEuviAbe9VYBebV
-q2OlYCDmN9OZX9AVoAmNqXE6E/p2k/WzXn5ju2OCcHDFpF4q8T/L+ejQDmUfSanO
-l6ZUXPmjsiya53gIsbIv9873AhjqZL/4r4fA404pN6si4KYb1gIk3thkafkvObMw
-zasE0bNboG1IlFdzTq9d/4ZoNQhJLbMPJvt4Oa0gxwxYaq05sXvjxUUZzHVHT8WH
-tcHPb4gyix1VeCF0Fbas
-=DQj5
+iQIcBAEBCAAGBQJQ014wAAoJEDxpGckxwJCBrtEP/iRM9+95LKMtimTmE9OIOy51
+VmPrgYsy2Ql7GG0He3iK6+j/nLXgJyghxQRM6z/YH3+Swy5JmxA//8GtlJldDRXf
+8LReOOrv5LQQs1qeC+JHzr+HtNu/gOe5wjRNKq7CQhkuK5+vyxJLUeU0OnNSmpVb
+QBGbNn2kDo2gRYPmuVshddQJxXF+pspTnicJgd04SW6JQzrhg+qxaXVQM33e+W4T
+fQZAB2aKuHn4fjCXa70th0nHCMuYD2yCgIi4d0i5i1qiy8OTGYRG3xKiWh3dXpUD
+cLeGwjLxSDSdBBEiXEXC+WESin1qgzFsaunKZwjMnN8UE08LmkQ6u/+ZCEiBK8eZ
+JX3eMPZGiMZe66+OsC7CMGsaomtJABsABJIpB53cB6CLSnFmYpn9lpt1B3bKGbCZ
+77ADtZa01pOT/aLNY1vdXvhWKK8pLFnt/5QPEtAClG0kCT6D7T+VJGTheu+aflcP
+C3Xol0gxmOwp6MIf1cN0+AlgUbzgQGFCdj9bnU+nvhSr/NSVaTvPnBMB462Ah9ox
+KZ8DGMQdOxt44O7FeKerk/SbEU56dT6t2fHCIRax31UKuMen2ppddsq7gewLSkC+
+CxbGBLnctrEquSDMFmbPaCrlLfW8uxG2DcJnt65Ro34uClVEyeSaefkLnLDmpEB4
+jzfpAhDUTXfF9XYKYn78
+=Jz85
 -----END PGP SIGNATURE-----
