@@ -1,6 +1,8 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/folding/folding-2009.0905.0811.ebuild,v 1.5 2012/12/20 18:49:26 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/folding/folding-2012.0226.1623.ebuild,v 1.1 2012/12/20 18:49:26 ulm Exp $
+
+EAPI=5
 
 inherit elisp
 
@@ -11,7 +13,6 @@ SRC_URI="mirror://gentoo/${P}.el.bz2"
 
 LICENSE="GPL-2+"
 SLOT="0"
-KEYWORDS="alpha amd64 x86"
-IUSE=""
+KEYWORDS="~alpha ~amd64 ~x86"
 
 SITEFILE="70${PN}-gentoo.el"
